deployments/production/checkout-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: checkout
  labels:
    app: checkout
spec:
  replicas: 2
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: users
            - name: MYSQL_HOST
              value: external-mysql.default.svc
            - name: MYSQL_PORT
              value: "3306"
            - name: MYSQL_ROOT_PASSWORD
              value: root
            - name: MYSQL_USER
              value: root
          image: pepeunlimited/checkout:0.1
          name: checkout
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
