deployments/production/checkout-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-checkout
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: api.dev.pepeunlimited.com
      http:
        paths:
          - backend:
              serviceName: checkout
              servicePort: 80
            path: /twirp/pepeunlimited.checkout.CheckoutService/*
